# TechnoWar

./: .clang-format  .env  .gitattributes  .gitignore  .project  CMakeLists.txt  GRAPHICS_WRAPPER_INFO.md  Makefile  README.md  android-debug.apk  android-release.apk  appIcon.xml  build.gradle  cmd.sh  exit  file-gen.sh  gcc.txt  gradle.properties  index.html  newNote.cpp  qtest  settings.gradle  test  tmain.c  untitled.txt
android/: .project  ANDROID.md  CMakeCache.txt  CMakeLists.txt  Makefile  android.md  build.gradle  changes.txt  cmake_install.cmake  compile_commands.json  gradle.properties  proguard-rules.pro  settings.gradle
android/backend/: android_opengles.c  assetManager.c  graphicsManager.c  inputManager.c  log.h  main.c  main.h  manager.h  opengles_wrapper.c
android/c/: android_engine.c  android_opengles.c  assetManager.c  extrasManager.c  glad.c  glad.h  glad_egl.c  glad_egl.h  graphicsManager.c  inputManager.c  log.h  main.c  manager.h  opengles_wrapper.c  timerManager.c  vulkan_core.h  vulkan_wrapper.c
android/c/api_graphics/: opengles_graphics.c
android/c/vk_video/: vulkan_video_codec_av1std.h  vulkan_video_codec_av1std_decode.h  vulkan_video_codec_av1std_encode.h  vulkan_video_codec_h264std.h  vulkan_video_codec_h264std_decode.h  vulkan_video_codec_h264std_encode.h  vulkan_video_codec_h265std.h  vulkan_video_codec_h265std_decode.h  vulkan_video_codec_h265std_encode.h  vulkan_video_codec_vp9std.h  vulkan_video_codec_vp9std_decode.h  vulkan_video_codecs_common.h
android/gradle/: libs.versions.toml
android/include/: android_engine.h
android/include/api_graphics/: opengles_graphics.h
android/shaders/: flatdraw.frag  flatdraw.vert  worlddraw.frag  worlddraw.vert
android/src/main/: AndroidManifest.xml
android/vulkan/: vulkan.h  vulkan_core.h
asset_manager/engine/base_converter/: CMakeLists.txt  bmfont.cpp  bmfont.hpp  main.cpp  stb_image.cpp  stb_image.hpp
core/: .gitignore  CMakeLists.txt  CORE.md  Makefile  build.gradle  c.sh  common.c  common.h  core.c  engine.cpp  engine.h  engine.hpp  game_logic_example.c  mainListener.cpp  mainListener.h  main_game.cpp  main_game.h  main_game.hpp  object_core.cpp  object_core.h  translatedGraphicsFunction.h  undeclare.cpp
core/2dbatch/: 2dbatch.cpp  2dbatch.h  uibatch.cpp  uibatch.h
core/assets/: bitmapfont.cpp  bitmapfont.hpp  bmfont.cpp  bmfont.hpp  fntRender.cpp  image.cpp  image.hpp  stb_image.cpp  stb_image.hpp
core/ext/stb/: image_read.c  image_read.h  image_write.c  image_write.h  local.c  local.h  rectpack.c  rectpack.h  truetype.c  truetype.h
core/graphics/: graphics.h
core/include/: common.h  core.h  engine.h  math_util.h  uistage.h  util.h
core/include/math/: vec_math.h
core/include/stb/: stb_image.h  stb_local.h
core/include/utility/: image_manager.h
core/input/: input.cpp  input.h
core/main/: CMakeLists.txt  common.c  common.h  engine.cpp  engine.hpp  main_game.cpp  main_game.hpp  uistage.c  uistage.h
core/main/assets/: stb_image.cpp  stb_image.hpp  uiskin.cpp  uiskin.hpp
core/main/include/: core.h  engine.h  engine.hpp  main_game.h  uistage.h  util.h
core/main/math/: matrix.c  matrix.h  vec.c  vec.h
core/main/qoi/: qoi.cpp  qoi.hpp
core/main/src/: core.c  engine.c  engine.cpp  main_game.cpp  util.c
core/main/stbi/: stbi_load.cpp  stbi_load.hpp
core/main/utils/: math.cpp  math.hpp  uistage.cpp  uistage.hpp  value.hpp
core/math/: matrix4.cpp  matrix4.h  matrix4.hpp
core/none/: stb_tilemap_editor.h
core/src/: common.c  core.c  engine.c  game_logic_example.c  math_util.c  uistage.c  util.c
core/src/main/: CMakeLists.txt  engine.hpp  main_game.cpp  main_game.hpp
core/src/math/: vec_math.c
core/src/stb/: stb_image.c  stb_local.c
core/src/utility/: image_manager.c
core/stb/: stb_image.c  stb_image.h  stb_local.c  stb_local.h
core/system/: stb_image.cpp  stb_image.hpp
core/test/: assets_for_desktop.cpp  image_rewrite.cpp  main.cpp
core/test/qoi/: qoi_test.cpp
core/test/src/: image_pack_test.c  main.c
core/test/stbi/: stbi_rectpack_test.cpp  stbi_write.cpp
core/test/uiskin/: uiskin_packer.cpp
core/tests/: codec_test.c  font_test.c  rectpack_test.c
core/tools/: console_util.h  file_rewrite.c  image_pack.c
core/tools/codec/: codec.h  image.c
core/user_interface/: user_interface.cpp  user_interface.h  user_interface.hpp
core/user_interface/actors/: actor.h  actor.hpp
core/utils/: math.cpp  math.hpp  uistage.cpp  uistage.hpp
core/vulkan/: vulkan.cpp  vulkan.hpp
desktop/: CMakeLists.txt  build.gradle  build.txt  desktop_main.cpp
desktop/main/: CMakeLists.txt  desktop_main.cpp
desktop/src/main/: CMakeLists.txt  desktop_main.cpp
desktop/test/: main.cpp
sdlview/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  sdlview
sdlview/include/: log.h  manager.h  triangle_renderer.h
sdlview/src/: main.c  triangle_renderer.c
tests/: CMakeLists.txt  decoder_test.c  fast_test.c  main.c
tests/include/: timing.h
tests/src/: main.c  timing.c
tests/stb/: rect_pack_test.c
tools/: CMakeCache.txt  CMakeLists.txt  Makefile  build.gradle  cmake_install.cmake  compile_commands.json  console_util.h  decoder  fasttest  image_pack.c  tools
tools/decoder/: image.c
tools/include/: codec.h  decoder.h
tools/main/: CMakeLists.txt  assets_for_android.cpp  assets_for_desktop.cpp  dp_rectpack.hpp  image_rewrite.cpp  main.cpp  own_rectpack.cpp  own_rectpack.hpp  stb_image.cpp  stb_image.hpp  stb_image_write.cpp  stb_image_write.hpp  stb_load.hpp  stb_rect_pack.cpp  stb_rect_pack.hpp  stbi_image.cpp  stbi_image_write.cpp  stbi_load.cpp  stbi_load.hpp  stbi_rectpack.cpp  stbi_rectpack.hpp  stbi_write.cpp  stbi_write.hpp  uiskin_packing.cpp
tools/none/: stb_rect_pack.cpp  stb_rect_pack.hpp
tools/src/: codec.c  decoder.c  image_pack.c  main.c
tools/stb/: stb_image_write.c  stb_image_write.h  stb_rect_pack.c  stb_rect_pack.h  stb_truetype.c  stb_truetype.h
tools/test/: main.cpp  own_rectpack_test.cpp  stbi_rectpack_test.cpp
tools/test_src/: decoder_test.c  fasttest.c
tools/unused/: stb_image.cpp
(+218 files in other folders)
